2012-11-30  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14899-1.patch: New.  Build ld and gold after gas.
	* README: Apply it.

2012-11-30  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14897-1.patch: New.  Install gold as default linker
	only for --disable-ld or --enable-gold=default.
	* README: Apply it.

2012-11-30  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-use-ld-1.patch: New.  Add fuse-ld= for GCC linker
	option compatibility
	* README: Apply it.

2012-11-23  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-error-1.patch: New.  Improve plugin error
	handling.
	* README: Apply it.  Improve ChangeLog.patches.
	* binutils-lto-mixed-18.patch: Updated for plugin error handling
	improvement.

2012-11-22  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2012-11-19  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2012-11-03  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-secondary-1.patch: Updated.

2012-10-25  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Check symbol for linker created
	section instead.

2012-10-25  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Never mark linker generated dynamic
	symbols undefined.

2012-10-25  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Fix LTO tests with -Wall and
	-Wp,-D_FORTIFY_SOURCE.

2012-09-19  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14591-1.patch: Removed.
	* README: Likewise.

2012-09-18  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14591-1.patch: Fix elf32-sh-symbian.c compilation.
	* binutils-secondary-1.patch: Updated.

2012-09-18  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-secondary-1.patch: Updated.

	* binutils-pr14591-1.patch: New.
	* README: Apply it.

2012-09-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-secondary-1.patch: Treat old secondary symbol as weak.

2012-09-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-secondary-1.patch: Replace "-z secondary" with
	"-z nosecondary".
