@@ -1,3 +1,8 @@
+2012-12-01  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-pr14899-1.patch: Also build binutils and gprof after
+	gas.
+
 2012-11-30  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-pr14899-1.patch: New.  Build ld and gold after gas.
